# nature_plot_skills

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
src/nature_plot_skills/: __init__.py  __main__.py  _assets.py  style.py
src/nature_plot_skills/assets/skills/nature_publication_figures/: SKILL.md
tests/: test_assets.py  test_style.py
